# GPGPU_ISIMA_2019-2020

./: LICENSE
01_lesson/: 01_lesson.tex
TPs/TP01/: CMakeLists.txt
TPs/TP01/doc/: TP01.tex
TPs/TP01/src/: main.cpp
TPs/TP02/: CMakeLists.txt
TPs/TP02/doc/: TP02.tex
TPs/TP02/src/: main.cpp
TPs/TP03/: TP03.tex
TPs/TP04/: TP04.tex
TPs/TP05/: TP05.tex
TPs/TP06/: TP06.tex
TPs/TP07/: TP07.tex
TPs/TP08/: TP08.tex
TPs/TP09_Optional/doc/: 01_practicle.tex
notation/: notation.tex
